# agentsaju

./: PROJECT_INTRO.md  PROJECT_INTRO_COPY.txt  README.md  prdtamplate.md  researchpromt.md  result1.md  result2.md  result4.md  schema.md  wireframe.md
backend/: .gitignore  README.md  pyproject.toml
backend/docs/: DEVELOPMENT.md
backend/docs/daily/03-18/: backend-doc-governance-and-core-update.md
backend/docs/ref/: architecture.md  getting-started.md
backend/docs/status/: PROJECT-STATUS.md
backend/docs/weekly/: 2026-W12.md
backend/src/saju_api/: main.py
backend/src/saju_core/: __init__.py  chart_engine.py  constants.py  errors.py  models.py  rule_engine.py  sexagenary.py  simulator.py  solar_terms.py  state_model.py  storage.py  time_utils.py  timeline.py
backend/tests/: conftest.py  test_api.py  test_chart_engine.py  test_simulation.py
backend/tests/fixtures/: chart_cases.json  kasi_regression.json
docs/: 01-product-overview.md  02-core-architecture.md  03-domain-model.md  04-chart-engine-spec.md  05-state-model-spec.md  06-simulation-spec.md  07-rule-engine-spec.md  08-agent-orchestration.md  09-narrative-layer-spec.md  10-api-contract.md  11-storage-and-lineage.md  12-test-plan.md  13-implementation-roadmap.md  14-open-source-stack.md  15-self-improvement-pipeline.md
