[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "saju-monthly-core"
version = "0.1.0"
description = "Deterministic Korean saju chart and monthly simulation core"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.32,<1.0",
    "pydantic>=2.9,<3.0",
    "korean-lunar-calendar>=0.3.1,<1.0",
    "skyfield>=1.49,<2.0",
    "timezonefinder==6.2.0",
    "tzdata>=2024.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3,<9.0",
    "httpx>=0.28,<1.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
